Fix footer on small screen

--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -28,6 +28,8 @@
         line-height: 1;
 
         &:first-child {
+          padding: 0;
+          margin: 0;
           border-left: 0;
         }
       }
